# resume

./: .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  generate_resume.py  requirements_lock.txt  resume.tex  resume_commands.tex
section/: defines.tex  education.tex  experience.tex  skills.tex
