module(
    name = "resume",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.10",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "my_deps")
